--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -236,14 +236,14 @@
     height: 28px;
 }
     .table .table-custom thead tr{
-        font-size:0.8rem!important;
+        font-size:0.7rem!important;
     }
     .table-custom td{
-        font-size:0.6rem!important;
+        font-size:0.65rem!important;
         padding:12px 0px 12px!important;
     }
     .table-custom th{
-        font-size:0.7rem!important;
+        font-size:0.8rem!important;
         padding:10px 5px 10px!important;
     }
     .modal-body{
