--- a/assets/scss/components/_popover.scss
+++ b/assets/scss/components/_popover.scss
@@ -10,6 +10,10 @@
     background:rgb(255, 171, 141)!important;
     height:auto;
 }
+.popover {
+    margin-bottom: 50px!important; /* Adjust as needed */
+  }
+  
 .popover-header-content {
     font-weight:600;
     display: flex!important;
